...
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="no_data">No geofence available. Please click + button to add new geofence.</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_latitude">Enter Latitude</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="add_geofence">Add Geofence</string>
    <string name="required_name_error_message">Please enter location name.</string>
    <string name="required_latitude_error_message">Please enter proper latitude.</string>
    <string name="required_longitude_error_message">Please enter proper longitude.</string>
    <string name="add_geofence_success_message">Congrats! Given geofence added successfully.</string>
...
